--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tarea1_moviles"
         tools:targetApi="31">
+
+        <!-- Activity principal -->
         <activity
-            android:name=".MainActivity"
+            android:name="activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Nueva Activity del perfil -->
+        <activity
+            android:name=".activities.SegundoActivity" android:label="Mi Perfil"
+            android:parentActivityName=".activities.MainActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity" />
+        </activity>
+
     </application>
 
 </manifest>
